--- a/CrayCray/res/layout/activity_main.xml
+++ b/CrayCray/res/layout/activity_main.xml
@@ -5,14 +5,22 @@
     android:orientation="vertical" >
     
     <TextView 
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingTop="100dp"
+        android:paddingBottom="200dp"
+        android:textSize="60sp"
+        android:gravity="center"
         android:id="@+id/feedTextView"/>
     
     
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:id="@+id/feedButton"
         android:text="@string/feed"
         android:textSize="40sp"
