--- a/CrayCray/res/layout/activity_main.xml
+++ b/CrayCray/res/layout/activity_main.xml
@@ -3,12 +3,59 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" >
 
+    <ProgressBar
+        android:id="@+id/foodBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:max="100" />
+
+    <ProgressBar
+        android:id="@+id/cuddleBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/foodBar"
+        android:max="100" />
+
+    <ProgressBar
+        android:id="@+id/cleanBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/cuddleBar"
+        android:max="100" />
+
+    <ProgressBar
+        android:id="@+id/energyBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/cleanBar"
+        android:max="100" />
+
+    <ImageView
+        android:id="@+id/foodIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/foodBar"
+        android:layout_alignParentTop="true"
+        android:minHeight="20dp"
+        android:minWidth="20dp"
+        android:src="@drawable/icon_food" />
+
     <ImageButton
         android:id="@+id/feedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_margin="1dp"
+        android:layout_below="@id/energyBar"
+        android:layout_marginTop="50dp"
         android:maxHeight="57dp"
         android:maxWidth="57dp"
         android:onClick="feed" />
@@ -49,6 +96,7 @@
         android:layout_margin="1dp"
         android:onClick="removePoo" />
 
+    <!--
     <TextView
         android:id="@+id/feedTextView"
         android:layout_width="wrap_content"
@@ -79,8 +127,8 @@
         android:layout_margin="40dp"
         android:text="100"
         android:textSize="30sp" />
-    
-        <TextView
+
+    <TextView
         android:id="@+id/energyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -90,5 +138,6 @@
         android:layout_margin="40dp"
         android:text="100"
         android:textSize="30sp" />
+    -->
 
 </RelativeLayout>
