--- a/CrayCray/res/layout/activity_main.xml
+++ b/CrayCray/res/layout/activity_main.xml
@@ -103,5 +103,13 @@
         android:layout_above="@+id/removePooButton"
         android:layout_centerHorizontal="true"
         android:src="@drawable/regular_baby" />
-
+    
+    <ImageView 
+        android:id="@+id/pooImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/crayCray"
+        android:layout_below="@id/crayCray"
+        android:src="@drawable/poo"
+        />
 </RelativeLayout>
