--- a/CrayCray/res/layout/activity_russian.xml
+++ b/CrayCray/res/layout/activity_russian.xml
@@ -12,5 +12,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/russian_roulette" />
+    
+    <Button 
+        android:id="@+id/fireGun"
+        android:text="@string/fire"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_margin="1dp"
+        android:onClick="" />
 
 </RelativeLayout>
