--- a/CrayCray/res/layout/activity_russian.xml
+++ b/CrayCray/res/layout/activity_russian.xml
@@ -21,6 +21,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_margin="1dp"
-        android:onClick="" />
+        android:onClick="playRussian" />
 
 </RelativeLayout>
