DrinkHappyPotion works except CrayCray-expression

--- a/CrayCray/res/layout/activity_main.xml
+++ b/CrayCray/res/layout/activity_main.xml
@@ -120,17 +120,27 @@
         android:layout_below="@id/crayCray"
         android:layout_toRightOf="@id/crayCray"
         android:src="@drawable/poo" />
-    
+
     <Button
         android:id="@+id/russianButton"
-        android:text="@string/russian_roulette"
-        android:textSize="15sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="1dp"
-        android:onClick="playRussianRoulette" />
+        android:onClick="playRussianRoulette"
+        android:text="@string/russian_roulette"
+        android:textSize="15sp" />
 
+    <Button
+        android:id="@+id/alcoholButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_margin="1dp"
+        android:onClick="happyPotion"
+        android:text="@string/happy_potion"
+        android:textSize="15sp" />
 
 </RelativeLayout>
