--- a/CrayCray/res/layout/activity_main.xml
+++ b/CrayCray/res/layout/activity_main.xml
@@ -121,7 +121,7 @@
         android:layout_toRightOf="@id/crayCray"
         android:src="@drawable/poo" />
 
-    <Button
+    <ImageButton
         android:id="@+id/russianButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -132,7 +132,7 @@
         android:text="@string/russian_roulette"
         android:textSize="15sp" />
 
-    <Button
+    <ImageButton
         android:id="@+id/happypotionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
