onclick method for about button set to howToPlay

--- a/CrayCray/res/layout/activity_main.xml
+++ b/CrayCray/res/layout/activity_main.xml
@@ -149,7 +149,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_margin="1dp"
-        android:onClick=""
+        android:onClick="howToPlay"
         android:text="@string/about"
         android:textSize="15sp" />
 
