--- a/CrayCray/res/layout/activity_russian.xml
+++ b/CrayCray/res/layout/activity_russian.xml
@@ -18,7 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="50dp"
         android:src="@drawable/scared_baby" />
     
     <Button 
@@ -27,7 +28,9 @@
         android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/scaredCrayCray"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="50dp"
         android:layout_margin="1dp"
         android:onClick="playRussian" />
 
