--- a/CrayCray/res/layout/activity_main.xml
+++ b/CrayCray/res/layout/activity_main.xml
@@ -2,6 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" >
+    
+    <ImageView 
+        android:id="@+id/background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:scaleType="centerCrop"
+            android:src="@drawable/background2" />
 
     <ProgressBar
         android:id="@+id/foodBar"
@@ -37,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/cleanBar"
+        
         android:max="100" />
 
     <ImageButton
@@ -45,9 +54,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/energyBar"
-        android:layout_marginTop="10dp"
-        android:maxHeight="57dp"
-        android:maxWidth="57dp"
+        android:background="@null"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
         android:onClick="feed" />
 
     <ImageButton
@@ -56,7 +65,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/feedButton"
-        android:layout_margin="1dp"
+        android:background="@null"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
         android:onClick="cuddle" />
 
     <ImageButton
@@ -65,7 +76,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/cuddleButton"
-        android:layout_margin="1dp"
+        android:background="@null"
+		android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
         android:onClick="clean" />
 
     <ImageButton
@@ -74,7 +87,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/cleanButton"
-        android:layout_margin="1dp"
+        android:background="@null"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
         android:onClick="sleep" />
 
     <ImageButton
@@ -83,7 +98,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/energyButton"
-        android:layout_margin="1dp"
+        android:background="@null"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
         android:onClick="removePoo" />
 
     <ImageButton
@@ -92,7 +109,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/removePooButton"
-        android:layout_margin="1dp"
+        android:background="@null"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
         android:onClick="cure" />
 
     <ImageView
@@ -109,6 +128,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/crayCray"
         android:layout_toRightOf="@id/crayCray"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/poo" />
 
     <ImageButton
@@ -117,10 +138,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="1dp"
-        android:onClick="playRussianRoulette"
-        android:text="@string/russian_roulette"
-        android:textSize="15sp" />
+        android:background="@null"
+        android:layout_marginLeft="15dp"
+        android:layout_margin="5dp"
+        android:onClick="playRussianRoulette" />
 
     <ImageButton
         android:id="@+id/happypotionButton"
@@ -128,10 +149,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_margin="1dp"
-        android:onClick="happyPotion"
-        android:text="@string/happy_potion"
-        android:textSize="15sp" />
+        android:background="@null"
+        android:layout_marginLeft="15dp"
+        android:layout_margin="5dp"
+        android:onClick="happyPotion" />
 
     <ImageButton
         android:id="@+id/aboutButton"
@@ -139,6 +160,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/energyBar"
         android:layout_alignParentRight="true"
+        android:background="@null"
+        android:layout_marginLeft="15dp"
         android:layout_margin="10dp"
         android:onClick="howToPlay"
         android:text="@string/about"
@@ -157,6 +180,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#000000" />
+            
 
     </AbsoluteLayout>
 
