--- a/CrayCray/res/values/styles.xml
+++ b/CrayCray/res/values/styles.xml
@@ -16,5 +16,8 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <color name="blue">#09cdda</color>
+    <color name="white">#ffffff</color>
 
 </resources>
