music is now playing when pushing happypotion button, pausing when pushing sleep button, and correctly pausing, stopping and resuming when jumping in and out of the app. the mute button also works, but so far there is no mute option for the russian roulette game

--- a/CrayCray/res/layout/activity_main.xml
+++ b/CrayCray/res/layout/activity_main.xml
@@ -213,6 +213,19 @@
         android:hapticFeedbackEnabled="true"
         android:onClick="feed"
         android:src="@drawable/button_food" />
+    
+    <Button 
+        android:id="@+id/muteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="15dp"
+        android:text="MUTE"
+        android:textSize="5sp"
+        android:layout_above="@id/feedButton"
+        android:hapticFeedbackEnabled="true"
+        android:onClick="muteSound"/>
 
     <ImageView
         android:id="@+id/crayCray"
